--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "devDependencies": {
     "vite": "^6.2.2",
-    "vite-plugin-restart": "^0.4.2",
-    "vite-plugin-glsl": "^1.3.3"
+    "vite-plugin-glsl": "^1.5.1",
+    "vite-plugin-restart": "^0.4.2"
   },
   "dependencies": {
     "gsap": "^3.12.7",
